--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set(countries))\n"
+    "unique_countries = lset(countries))\n"
    ]
   },
   {
