Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,47 +439,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'unique_couontries' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-cad020b79431>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0munique_countries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0munique_countries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_couontries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'unique_couontries' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries = list(unique_couontries)"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA',\n",
-       " 'Mexico',\n",
-       " 'Malta',\n",
-       " 'South Korea',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
+       "['Morocco',\n",
        " 'Croatia',\n",
+       " 'Argentina',\n",
+       " 'USA',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
        " 'Canada',\n",
        " 'Italy',\n",
-       " 'Morocco']"
+       " 'Mexico',\n",
+       " 'Finland']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
