--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(countries)\n",
+    "unique_countries = list(set(countries))\n",
     "unique_countries = list(unique_countries)"
    ]
   },
