--- a/index.ipynb
+++ b/index.ipynb
@@ -439,17 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set(countries))\n",
-    "unique_countries = list(unique_countries)"
+    "unique_countries = list(set(countries))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +466,7 @@
        " 'Finland']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
